# seating-chart

./: .gitignore  6x8.txt  CMakeLists.txt  Makefile  preproc.py
src/: main.cpp  seating_chart.cpp  seating_chart.h
